syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

import "common/point.proto";

message TowerResponse {
  common_models.Point location = 1;
};
