syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// responses
import "responses/towers-service/tower-response.proto";

message TowersAggregationResponse {
  repeated response_models.TowerResponse towers = 1;
};
